--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.2.2",
+    "rehype-raw": "^6.1.1",
     "styled-components": "^5.3.6",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
