--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@types/react-dom": "^18.0.10",
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.2",
+    "chart.js": "^4.2.1",
     "framer-motion": "^9.0.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^8.0.5",
     "react-redux": "^8.0.5",
