--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
     "@mui/styled-engine-sc": "^5.11.0",
+    "@mui/x-date-pickers": "^6.0.0",
     "@reduxjs/toolkit": "^1.9.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -21,6 +22,7 @@
     "@types/styled-components": "^5.1.26",
     "axios": "^1.3.2",
     "chart.js": "^4.2.1",
+    "dayjs": "^1.11.7",
     "framer-motion": "^9.0.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
