--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.21.0",
     "@craco/craco": "^7.0.0",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -23,6 +24,7 @@
     "axios": "^1.3.2",
     "chart.js": "^4.2.1",
     "dayjs": "^1.11.7",
+    "eslint-config-react-app": "^7.0.1",
     "framer-motion": "^9.0.2",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
